--- a/receiver.html
+++ b/receiver.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Receive Media</title>
+  <title>Received Files</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #e3f2fd;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       margin: 0;
-    }
-    .card {
-      background: white;
       padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 400px;
+    }
+    h2 {
       text-align: center;
+      color: #0d47a1;
+    }
+    .folder {
+      background: #ffffff;
+      border-radius: 10px;
+      padding: 1rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .folder h3 {
+      color: #333;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.5rem;
     }
     video, audio, img, pre {
       width: 100%;
@@ -30,54 +35,33 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2>Received Media</h2>
-    <div id="display">Loading...</div>
+
+  <h2>📁 Received Files</h2>
+
+  <div class="folder" id="imageFolder">
+    <h3>🖼️ Image Folder</h3>
+  </div>
+
+  <div class="folder" id="videoFolder">
+    <h3>🎥 Video Folder</h3>
+  </div>
+
+  <div class="folder" id="audioFolder">
+    <h3>🎧 Audio Folder</h3>
+  </div>
+
+  <div class="folder" id="textFolder">
+    <h3>📝 Text Folder</h3>
   </div>
 
   <script>
     const mediaData = localStorage.getItem("mediaFile");
     const mediaType = localStorage.getItem("mediaType");
-    const display = document.getElementById("display");
 
     if (mediaType && mediaData) {
-      display.innerHTML = ''; // Clear loading
-
-      if (mediaType.startsWith("video")) {
-        const video = document.createElement("video");
-        video.controls = true;
-        video.src = mediaData;
-        display.appendChild(video);
-
-      } else if (mediaType.startsWith("audio")) {
-        const audio = document.createElement("audio");
-        audio.controls = true;
-        audio.src = mediaData;
-        display.appendChild(audio);
-
-      } else if (mediaType.startsWith("image")) {
+      if (mediaType.startsWith("image")) {
         const img = document.createElement("img");
         img.src = mediaData;
-        display.appendChild(img);
+        document.getElementById("imageFolder").appendChild(img);
 
-      } else if (mediaType.startsWith("text")) {
-        fetch(mediaData)
-          .then((res) => res.text())
-          .then((text) => {
-            const pre = document.createElement("pre");
-            pre.textContent = text;
-            display.appendChild(pre);
-          })
-          .catch(() => {
-            display.textContent = "Error loading text.";
-          });
-
-      } else {
-        display.textContent = "Unsupported media type.";
-      }
-    } else {
-      display.textContent = "No media received.";
-    }
-  </script>
-</body>
-</html>
+      } else if (mediaType.startsWith("video
