--- a/index.html
+++ b/index.html
@@ -5,38 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Send Media</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #eef2f3, #8e9eab);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
     }
     .card {
-      background: white;
+      background: #ffffff;
       padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
       text-align: center;
-      width: 320px;
+      width: 90%;
+      max-width: 400px;
+    }
+    h2 {
+      color: #333;
+      margin-bottom: 1rem;
     }
     input, button, textarea {
-      margin: 1rem 0;
+      margin: 0.7rem 0;
       width: 100%;
-      padding: 0.5rem;
+      padding: 0.6rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
     }
-    .macs-go {
+    input:focus, textarea:focus {
+      outline: none;
+      border-color: #007bff;
+    }
+    button {
       background: #007bff;
       color: white;
-      text-decoration: none;
-      display: block;
-      margin-top: 1rem;
-      padding: 0.5rem;
-      border-radius: 8px;
-      cursor: pointer;
       border: none;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    .macs-go {
+      background: #28a745;
+      margin-top: 1rem;
+    }
+    .macs-go:hover {
+      background: #1e7e34;
     }
     #loginForm {
       display: none;
