--- a/receiver.html
+++ b/receiver.html
@@ -8,35 +8,41 @@
     body {
       margin: 0;
       padding: 2rem;
-      font-family: Arial, sans-serif;
-      background: url('wp3839980-tekken-7-heihachi-wallpapers.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #eef2f3 url('https://cdn-icons-png.flaticon.com/512/715/715676.png') no-repeat right bottom;
+      background-size: 200px;
+      background-attachment: fixed;
+      color: #333;
     }
     h2 {
       text-align: center;
       font-size: 2rem;
-      color: #ffe600;
+      color: #2c3e50;
       margin-bottom: 2rem;
     }
     .folder {
-      background: rgba(0, 0, 0, 0.7);
+      background: #ffffff;
       border-radius: 12px;
       padding: 1rem;
       margin-bottom: 2rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     .folder h3 {
       margin-bottom: 1rem;
-      color: #00e5ff;
-      border-bottom: 2px solid #00e5ff;
+      color: #007bff;
+      border-bottom: 2px solid #007bff;
       padding-bottom: 0.5rem;
     }
     video, audio, img, pre {
       width: 100%;
+      max-width: 500px;
       margin-top: 1rem;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    img {
+      object-fit: contain;
+      max-height: 300px;
     }
   </style>
 </head>
