--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      padding: 1rem;
     }
     .card {
       background: #ffffff;
@@ -24,7 +25,7 @@
       border-radius: 16px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
       text-align: center;
-      width: 90%;
+      width: 100%;
       max-width: 400px;
     }
     h2 {
@@ -48,6 +49,7 @@
       color: white;
       border: none;
       transition: background 0.3s;
+      cursor: pointer;
     }
     button:hover {
       background: #0056b3;
@@ -123,8 +125,8 @@
     }
 
     function loginAndGo() {
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
       if (username === "jin" && password === "synonym117") {
         window.location.href = "receiver.html";
       } else {
