--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Send Media</title>
+  <title>Send Media (Firebase)</title>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #eef2f3, #8e9eab);
@@ -28,10 +28,7 @@
       width: 100%;
       max-width: 400px;
     }
-    h2 {
-      color: #333;
-      margin-bottom: 1rem;
-    }
+    h2 { color: #333; margin-bottom: 1rem; }
     input, button, textarea {
       margin: 0.7rem 0;
       width: 100%;
@@ -51,20 +48,10 @@
       transition: background 0.3s;
       cursor: pointer;
     }
-    button:hover {
-      background: #0056b3;
-    }
-    .macs-go {
-      background: #28a745;
-      margin-top: 1rem;
-    }
-    .macs-go:hover {
-      background: #1e7e34;
-    }
-    #loginForm {
-      display: none;
-      margin-top: 1rem;
-    }
+    button:hover { background: #0056b3; }
+    .macs-go { background: #28a745; margin-top: 1rem; }
+    .macs-go:hover { background: #1e7e34; }
+    #loginForm { display: none; margin-top: 1rem; }
     #statusMessage {
       color: green;
       font-weight: bold;
@@ -74,14 +61,13 @@
 </head>
 <body>
   <div class="card">
-    <h2>Send Media</h2>
+    <h2>Send Media (Firebase)</h2>
     <input type="file" id="mediaInput" accept="video/*,audio/*,text/plain,image/*" />
     <textarea id="textMessage" rows="4" placeholder="Or type a text message..."></textarea>
     <button onclick="sendMedia()">Send</button>
     <div id="statusMessage"></div>
 
     <button class="macs-go" onclick="showLogin()">MACS GO</button>
-
     <div id="loginForm">
       <input type="text" id="username" placeholder="Username" />
       <input type="password" id="password" placeholder="Password" />
@@ -90,6 +76,18 @@
   </div>
 
   <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAX6rvCGNqZhkrN1lFzejhDEQ43N0wwqFg",
+      authDomain: "macs-portal.firebaseapp.com",
+      databaseURL: "https://macs-portal-default-rtdb.firebaseio.com",
+      projectId: "macs-portal",
+      storageBucket: "macs-portal.firebasestorage.app",
+      messagingSenderId: "774134396501",
+      appId: "1:774134396501:web:b81bdd60b4c064c58846dc"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+
     function sendMedia() {
       const fileInput = document.getElementById("mediaInput");
       const textMessage = document.getElementById("textMessage").value.trim();
@@ -99,9 +97,13 @@
       if (file) {
         const reader = new FileReader();
         reader.onload = function (e) {
-          localStorage.setItem("mediaFile", e.target.result);
-          localStorage.setItem("mediaType", file.type);
-          statusMessage.textContent = "Sent Complete!";
+          const mediaData = {
+            content: e.target.result,
+            type: file.type,
+            timestamp: Date.now()
+          };
+          db.ref("sharedMedia").push(mediaData);
+          statusMessage.textContent = "Sent to Firebase!";
           setTimeout(() => location.reload(), 1500);
         };
         reader.readAsDataURL(file);
@@ -109,9 +111,13 @@
         const blob = new Blob([textMessage], { type: "text/plain" });
         const reader = new FileReader();
         reader.onload = function (e) {
-          localStorage.setItem("mediaFile", e.target.result);
-          localStorage.setItem("mediaType", "text/plain");
-          statusMessage.textContent = "Sent Complete!";
+          const mediaData = {
+            content: e.target.result,
+            type: "text/plain",
+            timestamp: Date.now()
+          };
+          db.ref("sharedMedia").push(mediaData);
+          statusMessage.textContent = "Sent to Firebase!";
           setTimeout(() => location.reload(), 1500);
         };
         reader.readAsDataURL(blob);
